[gd_scene load_steps=35 format=3 uid="uid://bpuncy5ars5e6"]

[ext_resource type="Script" path="res://scenes/Entities/Plants/Sunflower/Sunflower.gd" id="1_i0hr1"]
[ext_resource type="Texture2D" uid="uid://bwlks66ror70d" path="res://_assets/images/Plantshadow.png" id="2_7t75o"]
[ext_resource type="Script" path="res://scenes/Entities/Plants/Sunflower/SunflowerStateMachine.gd" id="2_fyo5c"]
[ext_resource type="Script" path="res://scenes/Entities/Plants/Sunflower/State/Idle.gd" id="3_dwm0p"]
[ext_resource type="Script" path="res://scenes/Entities/Plants/Sunflower/State/SpawnSun.gd" id="4_7jnea"]
[ext_resource type="Texture2D" uid="uid://byn450xaie3yq" path="res://_assets/items/plants/sunflower/SunFlower0005.png" id="5_ubptr"]
[ext_resource type="Texture2D" uid="uid://bb2hxiim7l344" path="res://_assets/items/plants/sunflower/SunFlower0006.png" id="6_p7625"]
[ext_resource type="Texture2D" uid="uid://ccfn7fr46617t" path="res://_assets/items/plants/sunflower/SunFlower0007.png" id="7_xnm13"]
[ext_resource type="Texture2D" uid="uid://cjbbhyiicx42q" path="res://_assets/items/plants/sunflower/SunFlower0008.png" id="8_s0osl"]
[ext_resource type="Texture2D" uid="uid://c0vtgpjksop84" path="res://_assets/items/plants/sunflower/SunFlower0009.png" id="9_u67jv"]
[ext_resource type="Texture2D" uid="uid://w3ophdc7hjtd" path="res://_assets/items/plants/sunflower/SunFlower0010.png" id="10_hs4e8"]
[ext_resource type="Texture2D" uid="uid://gqr8jdi2limt" path="res://_assets/items/plants/sunflower/SunFlower0011.png" id="11_whxnt"]
[ext_resource type="Texture2D" uid="uid://3ayofvjh6b2x" path="res://_assets/items/plants/sunflower/SunFlower0012.png" id="12_bp4kj"]
[ext_resource type="Texture2D" uid="uid://dtk6ma7a58c1r" path="res://_assets/items/plants/sunflower/SunFlower0013.png" id="13_tplsx"]
[ext_resource type="Texture2D" uid="uid://bj7kkhbktxh1q" path="res://_assets/items/plants/sunflower/SunFlower0014.png" id="14_ms4ai"]
[ext_resource type="Texture2D" uid="uid://c066vis65ydaf" path="res://_assets/items/plants/sunflower/SunFlower0015.png" id="15_5ycbf"]
[ext_resource type="Texture2D" uid="uid://ci7cjyr6q7q2y" path="res://_assets/items/plants/sunflower/SunFlower0016.png" id="16_xosxd"]
[ext_resource type="Texture2D" uid="uid://cjem01unxo7x4" path="res://_assets/items/plants/sunflower/SunFlower0017.png" id="17_bbgxo"]
[ext_resource type="Texture2D" uid="uid://by53orqra58ik" path="res://_assets/items/plants/sunflower/SunFlower0018.png" id="18_j3kev"]
[ext_resource type="Texture2D" uid="uid://byo7vsqy3t8ll" path="res://_assets/items/plants/sunflower/SunFlower0019.png" id="19_dk4as"]
[ext_resource type="Texture2D" uid="uid://bxts8i7dm35ab" path="res://_assets/items/plants/sunflower/SunFlower0020.png" id="20_rilpx"]
[ext_resource type="Texture2D" uid="uid://b11s8bhx075s0" path="res://_assets/items/plants/sunflower/SunFlower0021.png" id="21_faqx3"]
[ext_resource type="Texture2D" uid="uid://dp2e6p7hbhfhg" path="res://_assets/items/plants/sunflower/SunFlower0022.png" id="22_lvnba"]
[ext_resource type="Texture2D" uid="uid://doa08oveuipsr" path="res://_assets/items/plants/sunflower/SunFlower0023.png" id="23_q3sq0"]
[ext_resource type="Texture2D" uid="uid://b23pera6cgycr" path="res://_assets/items/plants/sunflower/SunFlower0024.png" id="24_klxc2"]
[ext_resource type="Texture2D" uid="uid://dh5an0gkxl4" path="res://_assets/items/plants/sunflower/SunFlower0025.png" id="25_or75i"]
[ext_resource type="Texture2D" uid="uid://bvqyer37y3tjv" path="res://_assets/items/plants/sunflower/SunFlower0026.png" id="26_s2qj3"]
[ext_resource type="Texture2D" uid="uid://bmvo751ekqvvs" path="res://_assets/items/plants/sunflower/SunFlower0027.png" id="27_827br"]
[ext_resource type="Texture2D" uid="uid://ebaoo0b28upn" path="res://_assets/items/plants/sunflower/SunFlower0028.png" id="28_h0bl1"]
[ext_resource type="Texture2D" uid="uid://x4atkkiea847" path="res://_assets/items/plants/sunflower/SunFlower0029.png" id="29_ulcfb"]
[ext_resource type="PackedScene" uid="uid://boa01adyfbank" path="res://scenes/Audios/plant_on_grass_audio_player.tscn" id="31_c88b8"]
[ext_resource type="Texture2D" uid="uid://b1g5eh44ag2ra" path="res://_assets/images/2d_lights_and_shadows_neutral_point_light.webp" id="32_08k0s"]

[sub_resource type="SpriteFrames" id="SpriteFrames_aw4b7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ubptr")
}, {
"duration": 1.0,
"texture": ExtResource("6_p7625")
}, {
"duration": 1.0,
"texture": ExtResource("7_xnm13")
}, {
"duration": 1.0,
"texture": ExtResource("8_s0osl")
}, {
"duration": 1.0,
"texture": ExtResource("9_u67jv")
}, {
"duration": 1.0,
"texture": ExtResource("10_hs4e8")
}, {
"duration": 1.0,
"texture": ExtResource("11_whxnt")
}, {
"duration": 1.0,
"texture": ExtResource("12_bp4kj")
}, {
"duration": 1.0,
"texture": ExtResource("13_tplsx")
}, {
"duration": 1.0,
"texture": ExtResource("14_ms4ai")
}, {
"duration": 1.0,
"texture": ExtResource("15_5ycbf")
}, {
"duration": 1.0,
"texture": ExtResource("16_xosxd")
}, {
"duration": 1.0,
"texture": ExtResource("17_bbgxo")
}, {
"duration": 1.0,
"texture": ExtResource("18_j3kev")
}, {
"duration": 1.0,
"texture": ExtResource("19_dk4as")
}, {
"duration": 1.0,
"texture": ExtResource("20_rilpx")
}, {
"duration": 1.0,
"texture": ExtResource("21_faqx3")
}, {
"duration": 1.0,
"texture": ExtResource("22_lvnba")
}, {
"duration": 1.0,
"texture": ExtResource("23_q3sq0")
}, {
"duration": 1.0,
"texture": ExtResource("24_klxc2")
}, {
"duration": 1.0,
"texture": ExtResource("25_or75i")
}, {
"duration": 1.0,
"texture": ExtResource("26_s2qj3")
}, {
"duration": 1.0,
"texture": ExtResource("27_827br")
}, {
"duration": 1.0,
"texture": ExtResource("28_h0bl1")
}, {
"duration": 1.0,
"texture": ExtResource("29_ulcfb")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xdvl5"]

[node name="Sunflower" type="Area2D"]
script = ExtResource("1_i0hr1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 31)
texture = ExtResource("2_7t75o")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("start_state")]
script = ExtResource("2_fyo5c")
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_dwm0p")

[node name="SpawnSun" type="Node" parent="StateMachine"]
script = ExtResource("4_7jnea")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_aw4b7")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_xdvl5")

[node name="PlantOnGrassAudioPlayer" parent="." instance=ExtResource("31_c88b8")]

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.0
texture = ExtResource("32_08k0s")
texture_scale = 0.25

[node name="SpawnSunTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="SpawnSunTimer" to="StateMachine/Idle" method="_on_spawn_sun_timer_timeout"]
